# support-ai-assistant

./: .gitignore  LICENSE  README.md  SERVICE.md  justfile  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
app/: db.py  ingest.py  llm.py  main.py  models.py  retrieval.py  schemas.py
development/support-ai-assistant/backend/: Dockerfile  app.py  requirements.txt
scripts/: bootstrap.sh
tests/: test_app.py
