[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "flux-support-ai-assistant"
version = "0.1.1"
description = "FastAPI service for Flux support: upload tickets/docs and answer troubleshooting queries using retrieval and LLM."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Flux Team" }
]
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.8.2",
  "python-multipart==0.0.9",
  "scikit-learn==1.5.1",
  "numpy==1.26.4",
  "sqlalchemy==2.0.32",
]

[project.scripts]
flux-assistant-api = "app.main:main"

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["app"]
